src/styles/_reset.scss
/***************************************
 Reset
***************************************/
/*! rtl:begin:ignore*/
abbr,
address,
article,
aside,
audio,
b,
blockquote,
canvas,
caption,
cite,
code,
dd,
del,
details,
dfn,
div,
dl,
dt,
em,
fieldset,
figcaption,
figure,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
hgroup,
html,
i,
iframe,
img,
ins,
kbd,
label,
legend,
li,
mark,
menu,
nav,
object,
ol,
p,
pre,
q,
samp,
section,
small,
span,
strong,
sub,
summary,
sup,
table,
tbody,
td,
tfoot,
th,
thead,
time,
tr,
ul,
var,
video {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
}

body {
  line-height: 1;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

li,
ul,
nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

blockquote,
q {
  quotes: none;
}

blockquote:after,
blockquote:before,
q:after,
q:before {
  content: none;
}

a {
  margin: 0;
  padding: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
  outline: none;
  text-decoration: none;
}

ins {
  background-color: white;
  color: black;
  text-decoration: none;
}

mark {
  background-color: #ff9;
  color: black;
  font-style: italic;
  font-weight: bold;
}

del {
  text-decoration: line-through;
}

abbr[title],
dfn[title] {
  border-bottom: 1px dotted;
  cursor: help;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

.wrapper input,
select {
  vertical-align: middle;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}
/*! rtl:end:ignore*/

/***************************************
	Base
***************************************/

html {
  scroll-behavior: smooth;
  height: 100%;
  position: relative;
}

body {
  height: 100%;
  position: relative;
  overflow: hidden;
  overflow-y: scroll;
}

select {
  max-width: 100%;
}

embed,
iframe,
object,
video {
  max-width: 100%;
}

img {
  max-width: 100%;
  height: auto;
}

